<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reschedule_inspection_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reschedule_inspection.RescheduleInspectionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/reschedule_inspection_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/burgessOrange"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_main"
        app:title="Reschedule Inspection"
        app:titleTextColor="@color/colorWhite" />

    <EditText
        android:id="@+id/reschedule_inspection_textView_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:hint="@string/address"
        android:inputType="none"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reschedule_inspection_toolbar"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/reschedule_inspection_textView_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/reschedule_inspection_textView_address"
        app:layout_constraintStart_toStartOf="@+id/reschedule_inspection_textView_address"
        app:layout_constraintTop_toBottomOf="@+id/reschedule_inspection_textView_address" />

    <EditText
        android:id="@+id/reschedule_inspection_textView_inspection_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:hint="@string/inspection_type"
        android:inputType="none"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/reschedule_inspection_textView_address"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/reschedule_inspection_textView_address"
        app:layout_constraintTop_toBottomOf="@+id/reschedule_inspection_textView_date"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/reschedule_inspection_textView_po_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/po_number"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/reschedule_inspection_textView_address"
        app:layout_constraintStart_toStartOf="@+id/reschedule_inspection_textView_address"
        app:layout_constraintTop_toBottomOf="@+id/reschedule_inspection_textView_inspection_type"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/reschedule_inspection_textView_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/notes"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/reschedule_inspection_textView_address"
        app:layout_constraintStart_toStartOf="@+id/reschedule_inspection_textView_address"
        app:layout_constraintTop_toBottomOf="@+id/reschedule_inspection_textView_po_number"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/reschedule_inspection_button_reschedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_rounded_blue"
        android:text="@string/reschedule"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/reschedule_inspection_textView_address"
        app:layout_constraintStart_toStartOf="@+id/reschedule_inspection_textView_address"
        app:layout_constraintTop_toBottomOf="@+id/reschedule_inspection_textView_notes" />

</androidx.constraintlayout.widget.ConstraintLayout>